@@ -58,6 +58,12 @@
           it detected a malformed public key. [GL #1689]
         </para>
       </listitem>
+      <listitem>
+	<para>
+	  <command>named</command> could crash when cleaning dead nodes in
+	  lib/dns/rbtdb.c that have been reused meanwhile. [GL #1968]
+	</para>
+      </listitem>
     </itemizedlist>
   </section>
 
